--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "sass": "^1.34.0",
     "sass-loader": "^11.1.1",
     "style-loader": "^2.0.0",
-    "webpack": "5.33.2",
+    "webpack": "^5.37.1",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^4.0.0-beta.3",
